working on fixing memory leaks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -333,6 +333,7 @@ target_link_libraries(EagleVMTests PRIVATE
 if(MSVC) # msvc
 	target_link_options(EagleVMTests PRIVATE
 		"/DYNAMICBASE:NO"
+		"/D_ITERATOR_DEBUG_LEVEL=0"
 	)
 endif()
 
