--- a/cmake.toml
+++ b/cmake.toml
@@ -59,5 +59,5 @@ sources = [
 ]
 include-directories = ["EagleVM.Tests/headers"]
 compile-features = ["cxx_std_23"]
-link-libraries = ["EagleVMCore", "nlohmann_json", "Zydis", "spdlog::spdlog", "$<$<BOOL:${MINGW}>:ws2_32>"]
-msvc.link-options = ["/DYNAMICBASE:NO", "/D_ITERATOR_DEBUG_LEVEL=0"]
+link-libraries = ["EagleVMCore", "nlohmann_json", "Zydis", "spdlog::spdlog"]
+msvc.link-options = ["/DYNAMICBASE:NO"]
