wip complex temp mappings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,8 +201,12 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/op_signature.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/util.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/base_machine.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/commands/cmd_ctx_regenerate.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/commands/cmd_ctx_shuffle.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/commands/cmd_ctx_swap.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/handler_manager.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/machine.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/obfuscation/avx_pass.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/register_manager.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/settings.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_handlers.h"
