working on rewriting compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/codec/zydis_helper.cpp"
 	"EagleVM.Core/source/compiler/code_container.cpp"
 	"EagleVM.Core/source/compiler/code_label.cpp"
+	"EagleVM.Core/source/compiler/label_tracker.cpp"
 	"EagleVM.Core/source/compiler/section_manager.cpp"
 	"EagleVM.Core/source/disassembler/basic_block.cpp"
 	"EagleVM.Core/source/disassembler/disassembler.cpp"
@@ -133,6 +134,8 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/codec/zydis_helper.h"
 	"EagleVM.Core/headers/eaglevm-core/compiler/code_container.h"
 	"EagleVM.Core/headers/eaglevm-core/compiler/code_label.h"
+	"EagleVM.Core/headers/eaglevm-core/compiler/label_tracker.h"
+	"EagleVM.Core/headers/eaglevm-core/compiler/models/defs.h"
 	"EagleVM.Core/headers/eaglevm-core/compiler/section_manager.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/basic_block.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/disassembler.h"
