wip liveness analysis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/compiler/section_manager.cpp"
 	"EagleVM.Core/source/disassembler/basic_block.cpp"
 	"EagleVM.Core/source/disassembler/disassembler.cpp"
+	"EagleVM.Core/source/disassembler/liveness.cpp"
 	"EagleVM.Core/source/obfuscation/mba/math/mba_math.cpp"
 	"EagleVM.Core/source/obfuscation/mba/mba.cpp"
 	"EagleVM.Core/source/obfuscation/mba/mba_gen.cpp"
@@ -136,6 +137,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/compiler/section_manager.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/basic_block.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/disassembler.h"
+	"EagleVM.Core/headers/eaglevm-core/disassembler/liveness.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/models/block_end_reason.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/models/block_jump_location.h"
 	"EagleVM.Core/headers/eaglevm-core/obfuscation/mba/math/mba_math.h"
