--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "deps/spdlog"]
 	path = deps/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "deps/linux-pe"]
+	path = deps/linux-pe
+	url = https://github.com/can1357/linux-pe
