wip reworking block_ir structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,6 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/pe/packer/pe_packer.cpp"
 	"EagleVM.Core/source/pe/pe_generator.cpp"
 	"EagleVM.Core/source/util/random.cpp"
-	"EagleVM.Core/source/virtual_machine/ir/block.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/base_command.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_branch.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_context_load.cpp"
@@ -104,6 +103,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_sx.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/models/cmd_type.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/ir_translator.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/obfuscator/obfuscator.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/base_handler_gen.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/base_x86_translator.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handle_data.cpp"
@@ -180,9 +180,11 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_stack.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_type.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/ir_translator.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_block_action.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_discrete_reg.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_size.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_store.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/obfuscator/obfuscator.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/base_handler_gen.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/base_x86_translator.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handler_data.h"
