wip handler merging algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,8 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_pop.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_push.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_sx.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_x86_dynamic.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_x86_exec.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/models/cmd_type.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/ir_translator.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/obfuscator/obfuscator.cpp"
