some wip on jcc and flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/pe/packer/pe_packer.cpp"
 	"EagleVM.Core/source/pe/pe_generator.cpp"
 	"EagleVM.Core/source/util/random.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/analyzer/store.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/base_command.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_branch.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_context_load.cpp"
@@ -105,6 +106,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_x86_exec.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/models/cmd_type.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/ir_translator.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/obfuscator/models/command_trie.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/obfuscator/obfuscator.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/base_handler_gen.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/base_x86_translator.cpp"
@@ -114,6 +116,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/dec.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/imul.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/inc.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/jcc.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/lea.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/mov.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/movsx.cpp"
@@ -158,6 +161,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/util/assert.h"
 	"EagleVM.Core/headers/eaglevm-core/util/random.h"
 	"EagleVM.Core/headers/eaglevm-core/util/util.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/analyzer/store.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/block.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/base_command.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_branch.h"
@@ -186,6 +190,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_discrete_reg.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_size.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_store.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/obfuscator/models/command_trie.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/obfuscator/obfuscator.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/base_handler_gen.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/base_x86_translator.h"
@@ -196,12 +201,14 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/dec.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/imul.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/inc.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/jcc.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/lea.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/mov.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/movsx.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/pop.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/push.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/sub.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/flags.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/handler_build.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/handler_op.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/lift_action.h"
