progress is being made...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_x86_dynamic.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_x86_exec.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/models/cmd_type.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/dynamic_encoder/encoder.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/ir_translator.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/obfuscator/models/command_trie.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/obfuscator/obfuscator.cpp"
@@ -185,6 +186,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_operand_signature.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_stack.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_type.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/dynamic_encoder/encoder.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/ir_translator.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_block_action.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_discrete_reg.h"
