finalizing jcc implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_context_load.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_context_store.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_handler_call.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_jmp.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_mem_read.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_mem_write.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_pop.cpp"
@@ -169,6 +170,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_context_load.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_context_store.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_handler_call.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_jmp.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_mem_read.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_mem_write.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_pop.h"
@@ -189,6 +191,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/dynamic_encoder/encoder.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/ir_translator.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_block_action.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_branch_info.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_discrete_reg.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_size.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/models/ir_store.h"
