fixed invalid xor/and lifter/gen names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/x86/base_x86_translator.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handle_data.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/add.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/and.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/cmp.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/dec.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/imul.cpp"
@@ -124,7 +125,10 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/movsx.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/pop.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/push.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/shl.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/shr.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/sub.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/xor.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/util.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/base_machine.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/eagle/handler_generators.cpp"
@@ -202,6 +206,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handler_data.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handler_include.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/add.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/and.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/cmp.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/dec.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/imul.h"
@@ -212,7 +217,10 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/movsx.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/pop.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/push.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/shl.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/shr.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/sub.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/handlers/xor.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/flags.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/handler_build.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/handler_op.h"
