wip reworking handlers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_pop.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_push.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_sx.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_x.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_x86_dynamic.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_x86_exec.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/models/cmd_type.cpp"
@@ -184,6 +185,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_sx.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_vm_enter.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_vm_exit.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_x.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_x86_dynamic.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_x86_exec.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/include.h"
