rework of how ir blocks work and what instructions are allowed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_branch.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_context_load.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_context_store.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_exit.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_flags_load.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_handler_call.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_jmp.cpp"
@@ -189,6 +190,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_x86_dynamic.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_x86_exec.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/include.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/branch_command.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_handler_signature.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_modifier.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/models/cmd_operand_signature.h"
