wip massive encoder rewrite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,12 +133,16 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/x86/handlers/xor.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/x86/util.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/base_machine.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/bird/handler.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/bird/loader.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/bird/machine.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/eagle/handler_generators.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/eagle/handler_manager.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/eagle/machine.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/eagle/register_manager.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/register_context.cpp"
 	"EagleVM.Core/headers/eaglevm-core/codec/zydis_defs.h"
+	"EagleVM.Core/headers/eaglevm-core/codec/zydis_encoder.h"
 	"EagleVM.Core/headers/eaglevm-core/codec/zydis_enum.h"
 	"EagleVM.Core/headers/eaglevm-core/codec/zydis_helper.h"
 	"EagleVM.Core/headers/eaglevm-core/compiler/code_container.h"
@@ -234,6 +238,9 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/models/op_signature.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/x86/util.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/base_machine.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/bird/handler.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/bird/loader.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/bird/machine.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/commands/cmd_ctx_regenerate.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/commands/cmd_ctx_shuffle.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/commands/cmd_ctx_swap.h"
