--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,6 +138,11 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/machines/eagle/machine.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/eagle/register_manager.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/eagle/transition.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/owl/handler.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/owl/loader.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/owl/machine.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/owl/register_manager.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/owl/transition.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/register_context.cpp"
 	"EagleVM.Core/headers/eaglevm-core/codec/zydis_defs.h"
 	"EagleVM.Core/headers/eaglevm-core/codec/zydis_encoder.h"
@@ -238,16 +243,17 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/handler.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/loader.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/machine.h"
-	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/obfuscation/avx_pass.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/register_manager.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/settings.h"
-	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/eagle/util/hash.h"
-	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_handlers.h"
-	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/inst_regs.h"
-	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/machine.h"
-	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/pidgeon/settings.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/owl/handler.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/owl/loader.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/owl/machine.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/owl/register_manager.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/owl/settings.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/owl/stack.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/register_context.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/util.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/util/hash.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_op_action.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/models/vm_operand_sig.h"
 	cmake.toml
