--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/machines/owl/loader.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/owl/machine.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/owl/register_manager.cpp"
+	"EagleVM.Core/source/virtual_machine/machines/owl/stack.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/owl/transition.cpp"
 	"EagleVM.Core/source/virtual_machine/machines/register_context.cpp"
 	"EagleVM.Core/headers/eaglevm-core/codec/zydis_defs.h"
@@ -250,7 +251,6 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/owl/machine.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/owl/register_manager.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/owl/settings.h"
-	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/owl/stack.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/register_context.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/util.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/machines/util/hash.h"
