--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/disassembler/analysis/models/container.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/analysis/models/info.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/basic_block.h"
+	"EagleVM.Core/headers/eaglevm-core/disassembler/dasm.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/disassembler.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/models/block_end_reason.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/models/block_jump_location.h"
