fixed up implementation reworked interface ideas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/disassembler/dasm.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/models/block_end_reason.h"
 	"EagleVM.Core/headers/eaglevm-core/disassembler/models/block_jump_location.h"
+	"EagleVM.Core/headers/eaglevm-core/disassembler/models/branch_info.h"
 	"EagleVM.Core/headers/eaglevm-core/obfuscation/block.h"
 	"EagleVM.Core/headers/eaglevm-core/obfuscation/mba/math/mba_math.h"
 	"EagleVM.Core/headers/eaglevm-core/obfuscation/mba/mba.h"
