added carry down operands for memory operands

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/source/virtual_machine/ir/block.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/base_command.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_branch.cpp"
+	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_carry.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_cf.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_context_load.cpp"
 	"EagleVM.Core/source/virtual_machine/ir/commands/cmd_context_store.cpp"
@@ -174,6 +175,7 @@ set(EagleVMCore_SOURCES
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/block_builder.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/base_command.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_branch.h"
+	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_carry.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_cf.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_compare.h"
 	"EagleVM.Core/headers/eaglevm-core/virtual_machine/ir/commands/cmd_context_load.h"
